--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.2",
+    "elementz": "^2.0.5",
+    "emailjs-com": "^3.2.0",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.23"
+    "react-multistep": "^5.3.0",
+    "react-router-dom": "^6.2.1",
+    "tailwindcss": "^3.0.23",
+    "zustand": "^3.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
